fixed date not showing bug

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@
     border-radius: 20px 20px 20px 5px;
     max-width: 350px;
     min-width: 160px;
-    min-height: 50px;
+    min-height: 60px;
     max-height: 800px;
 
     align-self: flex-start;
